Delegate two new tasks

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <td></td>
           </tr>  
         -->
+        <!-- todo Select the 5 first images and fix them in order to use them.  -->
+        <!-- todo [2]: Fill them with the corresponding information. -->
         <tbody>
           <tr>
             <td>
