Add images for the 1st template; Write an additional product

--- a/index.html
+++ b/index.html
@@ -43,33 +43,41 @@
             <td>
               <picture><img src="" alt="" /></picture>
             </td>
-            <td></td>
-            <td>$</td>
-            <td></td>
+            <td>Adaptador Tipo <span>C</span> a <span>Audio y carga</span></td>
+            <td>5.00$</td>
+            <td>13637454</td>
           </tr>
           <tr>
             <td>
               <picture><img src="" alt="" /></picture>
             </td>
-            <td></td>
-            <td>$</td>
-            <td></td>
+            <td>Anillos de correa</td>
+            <td>7.00$</td>
+            <td>14700763</td>
           </tr>
           <tr>
             <td>
               <picture><img src="" alt="" /></picture>
             </td>
-            <td></td>
-            <td>$</td>
-            <td></td>
+            <td>Anillos de correa corazón y perlas</td>
+            <td>6.00$</td>
+            <td>13818317</td>
           </tr>
           <tr>
             <td>
               <picture><img src="" alt="" /></picture>
             </td>
-            <td></td>
-            <td>$</td>
-            <td></td>
+            <td>Audífonos luminosos</td>
+            <td>18.00$</td>
+            <td>10356407</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="" /></picture>
+            </td>
+            <td>Batidor eléctrico de mano</td>
+            <td>5.00$</td>
+            <td>1103103</td>
           </tr>
         </tbody>
       </table>
