Fix images css template; Add another image; Provide each 'img' a their respective 'src'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         <tbody>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture
+                ><img
+                  src="./images/1.png"
+                  alt="Adaptador Lightning - Audio y Carga"
+              /></picture>
             </td>
             <td>Adaptador Lightning - Audio y Carga</td>
             <td>5.00$</td>
@@ -42,7 +46,11 @@
           </tr>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture
+                ><img
+                  src="./images/4.png"
+                  alt="Adaptador tipo C a Audio y Carga"
+              /></picture>
             </td>
             <td>Adaptador Tipo <span>C</span> a <span>Audio y carga</span></td>
             <td>5.00$</td>
@@ -50,7 +58,9 @@
           </tr>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture
+                ><img src="./images/2.png" alt="Anillos de correa"
+              /></picture>
             </td>
             <td>Anillos de correa</td>
             <td>7.00$</td>
@@ -58,7 +68,7 @@
           </tr>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture><img src="./images/2.1.png" alt="" /></picture>
             </td>
             <td>Anillos de correa corazón y perlas</td>
             <td>6.00$</td>
@@ -66,7 +76,7 @@
           </tr>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture><img src="" alt="Audífonos luminosos" /></picture>
             </td>
             <td>Audífonos luminosos</td>
             <td>18.00$</td>
@@ -74,7 +84,9 @@
           </tr>
           <tr>
             <td>
-              <picture><img src="" alt="" /></picture>
+              <picture
+                ><img src="./images/5.jpg" alt="Batidor Eléctrico de mano"
+              /></picture>
             </td>
             <td>Batidor eléctrico de mano</td>
             <td>5.00$</td>
