--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <td>5.00$</td>
             <td>10933671</td>
           </tr>
-          <tr>
+          <tr class="active-row">
             <td>
               <picture
                 ><img
@@ -66,7 +66,7 @@
             <td>7.00$</td>
             <td>14700763</td>
           </tr>
-          <tr>
+          <tr class="active-row">
             <td>
               <picture><img src="./images/2.1.png" alt="" /></picture>
             </td>
@@ -82,7 +82,7 @@
             <td>18.00$</td>
             <td>10356407</td>
           </tr>
-          <tr>
+          <tr class="active-row">
             <td>
               <picture
                 ><img src="./images/5.jpg" alt="Batidor Eléctrico de mano"
