--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-    <h1 class="title">Beraca Electronic | Catálogo SHEIN</h1>
+    <header>
+      <h1 class="title">Beraca Electronic | Catálogo de Accesorios</h1>
+    </header>
     <section class="catalogue">
       <table class="cat-table">
         <thead>
