Integrate each product of the first list

--- a/index.html
+++ b/index.html
@@ -21,16 +21,6 @@
             <th>Código</th>
           </tr>
         </thead>
-        <!-- Template: 
-          <tr>
-            <td>
-              <picture><img src="" alt="" /></picture>
-            </td>
-            <td></td>
-            <td>$</td>
-            <td></td>
-          </tr>  
-        -->
         <!-- todo Select the 5 first images and fix them in order to use them.  -->
         <!-- todo [2]: Fill them with the corresponding information. -->
         <tbody>
@@ -93,6 +83,587 @@
             <td>Batidor eléctrico de mano</td>
             <td>5.00$</td>
             <td>1103103</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Bolígrafo Stylus Doble Punta"
+              /></picture>
+            </td>
+            <td>Bolígrafo Stylus Doble Punta</td>
+            <td>3.00$</td>
+            <td>12463498</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Bolsa de Cocina para Horno" /></picture>
+            </td>
+            <td>Bolsa de Cocina para Horno</td>
+            <td>5.00$</td>
+            <td>10878813</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Bolso para teléfono Bandolero"
+              /></picture>
+            </td>
+            <td>Bolso para teléfono Bandolero</td>
+            <td>5.00$</td>
+            <td>11487855</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Bolso para Teléfono Bandolero"
+              /></picture>
+            </td>
+            <td>Bolso para teléfono Bandolero</td>
+            <td>5.00$</td>
+            <td>12168608</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Bolso Pop-it Unicornio" /></picture>
+            </td>
+            <td>Bolso Pop-it Unicornio</td>
+            <td>5.00$</td>
+            <td>5603777</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Botella 500ml (Dibujos Animados)"
+              /></picture>
+            </td>
+            <td>Botella 500ml (Dibujos Animados)</td>
+            <td>4.00$</td>
+            <td>13456293</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Botella Ombré '1 Litro'" /></picture>
+            </td>
+            <td>Botella Ombré '1 Litro'</td>
+            <td>12.00$</td>
+            <td>12024589</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Botella Ombré '1 Litro'" /></picture>
+            </td>
+            <td>Botella Ombré '1 Litro'</td>
+            <td>12.00$</td>
+            <td>12028798</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Brochas de Maquillaje" /></picture>
+            </td>
+            <td>Brochas de Maquillaje</td>
+            <td>5.00$</td>
+            <td>12080273</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Brochas de Maquillaje" /></picture>
+            </td>
+            <td>Brochas de Maquillaje</td>
+            <td>5.00$</td>
+            <td>8904742</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Cable de Dato 3 en 1 (Retráctil)"
+              /></picture>
+            </td>
+            <td>Cable de Dato 3 en 1 (Retráctil)</td>
+            <td>5.00$</td>
+            <td>11176733</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Cable Magnético (Tipo C - 1 Metro)"
+              /></picture>
+            </td>
+            <td>Cable Magnético (Tipo C - 1 Metro)</td>
+            <td>5.00$</td>
+            <td>15634505</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Cable Magnético (Tipo C - 2 Metros)"
+              /></picture>
+            </td>
+            <td>Cable Magnético (Tipo C - 2 Metros)</td>
+            <td>6.00$</td>
+            <td>13935498</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Cable Magnético (Tipo 'micro' - 1 Metro)"
+              /></picture>
+            </td>
+            <td>Cable Magnético (Tipo 'micro' - 1 Metro)</td>
+            <td>5.00$</td>
+            <td>13935497</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Caja de Jabón (50 Piezas)" /></picture>
+            </td>
+            <td>Caja de Jabón (50 Piezas)</td>
+            <td>5.00$</td>
+            <td>15502173</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Calentador de Tazas Eléctrico"
+              /></picture>
+            </td>
+            <td>Calentador de Tazas Eléctrico</td>
+            <td>5.00$</td>
+            <td>12634865</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Cargador Inalámbrico (Smartwatch)"
+              /></picture>
+            </td>
+            <td>Cargador Inalámbrico (Smartwatch)</td>
+            <td>8.00$</td>
+            <td>14743652</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Cepillo de Inodoro" /></picture>
+            </td>
+            <td>Cepillo de Inodoro</td>
+            <td>2.00$</td>
+            <td>12059293</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Cepillo Facial 5 en 1" /></picture>
+            </td>
+            <td>Cepillo Facial 5 en 1</td>
+            <td>10.00$</td>
+            <td>14257138</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Cepillo Secador de Cabello (CRASTS)"
+              /></picture>
+            </td>
+            <td>Cepillo Secador de Cabello (CRASTS)</td>
+            <td>20.00$</td>
+            <td>14371891</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Cepillo Silicon limpieza Facial"
+              /></picture>
+            </td>
+            <td>Cepillo Silicon limpieza Facial</td>
+            <td>2.00$</td>
+            <td>11076089</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Chubasquero Portátil" /></picture>
+            </td>
+            <td>Chubasquero Portátil</td>
+            <td>3.00$</td>
+            <td>12514187</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Cinta Corrector" /></picture>
+            </td>
+            <td>Cinta Corrector</td>
+            <td>3.00$</td>
+            <td>1079186</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Cohete de Burbujas" /></picture>
+            </td>
+            <td>Cohete de Burbujas</td>
+            <td>10.00$</td>
+            <td>14478099</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Copo de Jabón con diseño de Flor 20UND."
+              /></picture>
+            </td>
+            <td>
+              Copo de Jabón con diseño de Flor 20<abbr title="Unidades"
+                >UND</abbr
+              >
+            </td>
+            <td>1.00$</td>
+            <td>15183480</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Correa Magnética (Smartwatch)"
+              /></picture>
+            </td>
+            <td>Correa Magnética (Smartwatch)</td>
+            <td>5.00$</td>
+            <td>12971511</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Correa Pulsera Smartwatch - 42/44/45/49m"
+              /></picture>
+            </td>
+            <td>Correa Pulsera Smartwatch - 42/44/45/49mm</td>
+            <td>12.00$</td>
+            <td>15627880</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Difusor de Aceite Portátil" /></picture>
+            </td>
+            <td>Difusor de Aceite Portátil</td>
+            <td>10.00$</td>
+            <td>14329256</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Dispositivo Anti-Pérdida GPS/Bluetooth"
+              /></picture>
+            </td>
+            <td>Dispositivo Anti-Pérdida GPS/Bluetooth</td>
+            <td>5.00$</td>
+            <td>14523339</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Afeitadora Facial" /></picture>
+            </td>
+            <td>Afeitadora Facial</td>
+            <td>9.00$</td>
+            <td>14969009</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Estante Almacenamiento para TV"
+              /></picture>
+            </td>
+            <td>Estante Almacenamiento para TV</td>
+            <td>8.00$</td>
+            <td>11993141</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture
+                ><img src="" alt="Forro Smartwatch Luminoso (45mm.)"
+              /></picture>
+            </td>
+            <td>Forro Smartwatch Luminoso (45mm.)</td>
+            <td>5.00$</td>
+            <td>15068538</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="HDML a RCA" /></picture>
+            </td>
+            <td>HDML a RCA</td>
+            <td>8.00$</td>
+            <td>14492728</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Holder Cargador 10W" /></picture>
+            </td>
+            <td>Holder Cargador 10W</td>
+            <td>15.00$</td>
+            <td>15265658</td>
+          </tr>
+          <tr>
+            <td>
+              <picture><img src="" alt="Holder Cargador 15W" /></picture>
+            </td>
+            <td>Holder Cargador 15W</td>
+            <td>25.00$</td>
+            <td>14196685</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Jabón de Inodoro" /></picture>
+            </td>
+            <td>Jabón de Inodoro</td>
+            <td>5.00$</td>
+            <td>14489069</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Kit de Uñas Semi-Permanentes"
+              /></picture>
+            </td>
+            <td>Kit de Uñas Semi-Permanentes</td>
+            <td>20.00$</td>
+            <td>14589186</td>
+          </tr>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Licuadora Recargable (1 Vaso)" /></picture>
+            </td>
+            <td>Licuadora Recargable (1 Vaso)</td>
+            <td>25.00$</td>
+            <td>12028435</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Luz de Relleno Mini-Clip"
+              /></picture>
+            </td>
+            <td>Luz de Relleno Mini-Clip</td>
+            <td>15.00$</td>
+            <td>10933279</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Máquina Selladora" /></picture>
+            </td>
+            <td>Máquina Selladora</td>
+            <td>5.00$</td>
+            <td>14600115</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Mini Cámara para Niños"
+              /></picture>
+            </td>
+            <td>Mini Cámara para Niños</td>
+            <td>20.00$</td>
+            <td>14254117</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Moldes de Silicón Ponques (12PZAS)" /></picture>
+            </td>
+            <td>Moldes de Silicón Ponques (12PZAS)</td>
+            <td>4.00$</td>
+            <td>9720852</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Molinillo Eléctrico"
+              /></picture>
+            </td>
+            <td>Molinillo Eléctrico</td>
+            <td>15.00$</td>
+            <td>11828661</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Monedero Con Relieve" /></picture>
+            </td>
+            <td>Monedero Con Relieve</td>
+            <td>2.00$</td>
+            <td>8399727</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Palo de Selfie Trípode"
+              /></picture>
+            </td>
+            <td>Palo de Selfie Trípode</td>
+            <td>15.00$</td>
+            <td>3388962</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Calentador Portavasos eléctrico" /></picture>
+            </td>
+            <td>Calentador Portavasos eléctrico</td>
+            <td>10.00$</td>
+            <td>14837360</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Posavasos Silicón"
+              /></picture>
+            </td>
+            <td>Posavasos Silicón</td>
+            <td>5.00$</td>
+            <td>11717431</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Protector Cagador Hamburguesa" /></picture>
+            </td>
+            <td>Protector Cagador Hamburguesa</td>
+            <td>8.00$</td>
+            <td>13574800</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Protector Cargador Batería (3 Piezas)"
+              /></picture>
+            </td>
+            <td>Protector Cargador Batería (3 Piezas)</td>
+            <td>5.00$</td>
+            <td>12098413</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Protector Cargador Café (3 Piezas)" /></picture>
+            </td>
+            <td>Protector Cargador Café (3 Piezas)</td>
+            <td>5.00$</td>
+            <td>12390483</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Protector de teléfono para ducha"
+              /></picture>
+            </td>
+            <td>Protector de teléfono para ducha<td>
+            <td>10.00$</td>
+            <td>13211607</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Protector de Pantalla Smartwatch Redondo" /></picture>
+            </td>
+            <td>Protector de Pantalla Smartwatch Redondo</td>
+            <td>4.00$</td>
+            <td>13201201</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Set Manga Pastelera"
+              /></picture>
+            </td>
+            <td>Set Manga Pastelera<td>
+            <td>8.00$</td>
+            <td>12868374</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Smartwatch Kids" /></picture>
+            </td>
+            <td>Smartwatch Kids</td>
+            <td>15.00$</td>
+            <td>14572932</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Soporte Anti-Pérdida Audífonos"
+              /></picture>
+            </td>
+            <td>Soporte Anti-Pérdida Audífonos<td>
+            <td>2.00$</td>
+            <td>10596999</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Soporte de Lentes para Carro" /></picture>
+            </td>
+            <td>Soporte de Lentes para Carro</td>
+            <td>3.00$</td>
+            <td>12683028</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Tablet Digital 8.5"
+              /></picture>
+            </td>
+            <td>Tablet Digital 8.5"<td>
+            <td>10.00$</td>
+            <td>14698128</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Taza Mug Auto Agitación 450ML" /></picture>
+            </td>
+            <td>Taza Mug Auto Agitación 450ML</td>
+            <td>25.00$</td>
+            <td>12478850</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Temporizador para Huevos"
+              /></picture>
+            </td>
+            <td>Temporizador para Huevos<td>
+            <td>4.00$</td>
+            <td>9988263</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Termo Acero 500ML" /></picture>
+            </td>
+            <td>Termo Acero 500ML</td>
+            <td>6.00$</td>
+            <td>11882470</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Termómetro De Cocina"
+              /></picture>
+            </td>
+            <td>Termómetro De Cocina<td>
+            <td>5.00$</td>
+            <td>5589467</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Urinario Femenino Portátil" /></picture>
+            </td>
+            <td>Urinario Femenino Portátil</td>
+            <td>2.00$</td>
+            <td>2045929</td>
+          </tr>
+          <tr>
+            <td>
+              <picture
+                ><img src="" alt="Vaso Plástico de Café"
+              /></picture>
+            </td>
+            <td>Vaso Plástico de Café<td>
+            <td>8.00$</td>
+            <td>11791986</td>
+          </tr>
+          <tr class="active-row">
+            <td>
+              <picture><img src="" alt="Vaso plástico Minimalista 500ML" /></picture>
+            </td>
+            <td>Vaso plástico Minimalista 500ML</td>
+            <td>4.00$</td>
+            <td>13630615</td>
           </tr>
         </tbody>
       </table>
