Fix several row table issues

--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                 ><img src="" alt="Protector de teléfono para ducha"
               /></picture>
             </td>
-            <td>Protector de teléfono para ducha<td>
+            <td>Protector de teléfono para ducha</td>
             <td>10.00$</td>
             <td>13211607</td>
           </tr>
@@ -563,7 +563,7 @@
                 ><img src="" alt="Set Manga Pastelera"
               /></picture>
             </td>
-            <td>Set Manga Pastelera<td>
+            <td>Set Manga Pastelera</td>
             <td>8.00$</td>
             <td>12868374</td>
           </tr>
@@ -581,7 +581,7 @@
                 ><img src="" alt="Soporte Anti-Pérdida Audífonos"
               /></picture>
             </td>
-            <td>Soporte Anti-Pérdida Audífonos<td>
+            <td>Soporte Anti-Pérdida Audífonos</td>
             <td>2.00$</td>
             <td>10596999</td>
           </tr>
@@ -599,7 +599,7 @@
                 ><img src="" alt="Tablet Digital 8.5"
               /></picture>
             </td>
-            <td>Tablet Digital 8.5"<td>
+            <td>Tablet Digital 8.5"</td>
             <td>10.00$</td>
             <td>14698128</td>
           </tr>
@@ -617,7 +617,7 @@
                 ><img src="" alt="Temporizador para Huevos"
               /></picture>
             </td>
-            <td>Temporizador para Huevos<td>
+            <td>Temporizador para Huevos</td>
             <td>4.00$</td>
             <td>9988263</td>
           </tr>
@@ -635,7 +635,7 @@
                 ><img src="" alt="Termómetro De Cocina"
               /></picture>
             </td>
-            <td>Termómetro De Cocina<td>
+            <td>Termómetro De Cocina</td>
             <td>5.00$</td>
             <td>5589467</td>
           </tr>
@@ -653,7 +653,7 @@
                 ><img src="" alt="Vaso Plástico de Café"
               /></picture>
             </td>
-            <td>Vaso Plástico de Café<td>
+            <td>Vaso Plástico de Café</td>
             <td>8.00$</td>
             <td>11791986</td>
           </tr>
